web: split into 3 modules, upgraded gwt to version 2.7